<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_text">Luther’s Wedding 2015</string>
    <string name="maps">Map</string>
    <string name="agenda">Events</string>
    <string name="app_name">Luther’s Wedding</string>
    <string name="all">[All]</string>
    <string name="end">-END-</string>
    <string name="end_text">Unfortunately, this year’s festival is already over!</string>
    <string name="choice">Selected location</string>
    <string name="end_event">This event has already taken to end!</string>
    <string name="absage">Luther’s Wedding in 2013 was canceled due to high water!</string>
    <string name="share">I’m with Luther’s Wedding!</string>
    <string name="absage_share">I wanted unfortunately announced to Luther’s Wedding!</string>
    <string name="share_end">I was on Luther’s Wedding!</string>
    <string name="ortung">Location determination</string>
    <string name="genauigkeit">By switching from WiFi or GPS accuracy can be increased. Switch now?</string>
    <string name="lastpoint">Last location</string>
    <string name="lastpoint_desc">Remember last selected location</string>
    <string name="automap">Location</string>
    <string name="automap_desc">Automatically update with location less than 10 km away</string>
    <string name="ortung_desc">Improve accurancy of the location selection through WLAN or GPS</string>
    <string name="check_alert">Do not ask again</string>
    <string name="menu_webseite">Website</string>
    <string name="menu_selfpoint">My location</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_info">Info</string>
    <string name="next">The next date of Luther’s Wedding from 13.06.2014 to 15.06.2014</string>
    <string name="info">About</string>
    <string name="library">The maps are produced on the basis $1 of the library $2</string>
    <string name="library1">The route is calculated by $1 and preparation provided by the library $2</string>
    <string name="newLocation">New event location</string>
    <string name="notification_desc">Notification by new event location</string>
    <string name="notification">Notification</string>
    <string name="ortung_no">Location determination not avalible!</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="source">Data source</string>
    <string name="webinfo">Information</string>
    <string name="url">http://www.lutherhochzeit.de</string>
    <string name="gmaps">Google Maps</string>
    <string name="routing">Routing</string>
    <string name="routing_out">Delete route</string>
    <string name="routing_error">Routing error</string>
    <string name="sofortDownload">Just in time download</string>
    <string name="sofortDownload_desc">Just in time download for infosites</string>
    <string name="webinfo_link">Click me for advanced information</string>
    <string name="wait">Please wait</string>
    <string name="wait_calc">Calculation route &#8230;</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="please_select">Please select</string>
    <string name="routetype">Routetype</string>
    <string name="routetype_pref_desc">Calculate the route depending on transport</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
